--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -2,14 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site em repositório</title>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptatum molestias quia aperiam, totam odio nulla praesentium neque maxime ratione est officiis eveniet mollitia minima repellendus deserunt eligendi modi sed.</P>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ullam reprehenderit odio, corporis maxime veniam, dicta eum delectus vitae similique dolorem est modi, ab aliquam perferendis unde itaque animi alias.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo provident non nam vitae soluta quod ea! Error nesciunt ea architecto hic dolor cum necessitatibus at ipsa magnam voluptas, ratione rem.</p>
 </body>
 </html>
