--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -5,7 +5,7 @@
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Meu primeiro site em repositório</title>
+     <title>Meu primeiro site em repositório atraves do curso em video</title>
  </head>
  <body>
      <h1>Olá, Mundo!</h1>
